force-app/main/default/objects/SprintBurndown__c/fields/DayNumber__c.field-meta.xml
<CustomField>
    <fullName>DayNumber__c</fullName>
    <description>Used to multiply the Points by Day to Complete and generate the Sprint Planned Burndown.</description>
    <label>Day Number (Multiplier)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>