force-app/main/default/objects/SprintBurndown__c/fields/DayPlannedBurndown__c.field-meta.xml
<CustomField>
    <fullName>DayPlannedBurndown__c</fullName>
    <formula>Sprint__r.SprintEstimatedPoints__c - ( Sprint__r.PointsDayCompleteBurndown__c *  DayNumber__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Planned Burndown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>