force-app/main/default/objects/SprintBurndown__c/fields/PlannedBurndown__c.field-meta.xml
<CustomField>
    <fullName>PlannedBurndown__c</fullName>
    <label>Planned Burndown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>