force-app/main/default/objects/SprintBurndown__c/fields/PointsComplete__c.field-meta.xml
<CustomField>
    <fullName>PointsComplete__c</fullName>
    <label>Points to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>