force-app/main/default/objects/SprintBurndown__c/fields/PointsCompleted__c.field-meta.xml
<CustomField>
    <fullName>PointsCompleted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points Completed</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>