force-app/main/default/objects/SprintBurndown__c/fields/PointsCompletedToday__c.field-meta.xml
<CustomField>
    <fullName>PointsCompletedToday__c</fullName>
    <label>Points completed today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>