force-app/main/default/objects/SprintBurndown__c/fields/SprintEstimatedPoints__c.field-meta.xml
<CustomField>
    <fullName>SprintEstimatedPoints__c</fullName>
    <label>Sprint Estimated Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>