force-app/main/default/objects/SprintBurndown__c/fields/SprintPointsToComplete__c.field-meta.xml
<CustomField>
    <fullName>SprintPointsToComplete__c</fullName>
    <formula>Sprint__r.SprintEstimatedPoints__c -  PointsCompleted__c</formula>
    <label>Sprint Points to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>