force-app/main/default/objects/SprintBurndown__c/fields/SprintPointsToCompleteWF__c.field-meta.xml
<CustomField>
    <fullName>SprintPointsToCompleteWF__c</fullName>
    <label>Sprint Points To Complete WF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>